<resources>
    <string name="app_name">SravniRuHackathon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CalculateOSAGOText">Рассчитать ОСАГО</string>
    <string name="RegTownText">Город регистрации собственника</string>
    <string name="EnginePowerText">Мощность автомобиля</string>
    <string name="QuantityDriversText">Сколько водителей</string>
    <string name="MinDriverAgeText">Возраст младшего из водителей</string>
    <string name="minDriverExpText">Минимальный стаж водителей</string>
    <string name="YearsWithoutAccidentsText">Сколько лет не было аварий</string>
    <string name="CoeffsNamePlaceholder">(%1$s)</string>
    <string name="PricePlaceholder">%1$s ₽</string>
    <string name="CoeffWithDividerPlaceholder"><![CDATA[<font color="%1$s">%2$s</font>×]]></string>
    <string name="LastCoeffPlaceholder"><![CDATA[<font color="%1$s">%2$s</font>]]></string>
    <string name="calculateOsago">Калькулятор ОСАГО</string>
    <string name="YourCoeffs">Ваши коэффициенты</string>
    <string name="expand">expand</string>
    <string name="expandcollapse">TODO</string>
    <string name="coeffsHeader">БТ×КМ×КТ×КБМ×КО×КВС</string>
    <string name="defaultPrice">2 754 – 4 432 ₽</string>
    <string name="baseTariff">(базовый тариф)</string>
    <string name="coeffBT">БТ</string>
    <string name="InstalledByInsCompany">Устанавливает страховая компания</string>
    <string name="SomeKindOfTitle">Какой-то заголовок</string>
    <string name="next">Далее</string>
    <string name="backLetter"><![CDATA[<]]></string>
    <string name="ready">Готово</string>
    <string name="PolicySuccIssued">Ваш полис успешно оформлен</string>
    <string name="withoutLimits">Без ограничений</string>
    <string name="CalculatePriceTitle">Расчет цены полиса</string>
    <string name="colorLattice">#%1$s</string>
    <string name="CalculateExactPriceAndBuy">Рассчитать точную цену и купить</string>
    <string name="textview">TextView</string>
    <string name="examplePrice">101 232 $</string>
    <string name="C">C</string>

    <string-array name="citiesHints">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Новосибирск</item>
        <item>Геленджик</item>
        <item>Калининград</item>
        <item>Нижний Новгород</item>
        <item>Домбай</item>
    </string-array>

    <string-array name="enginePowerHints">
        <item>до 50 л.с.</item>
        <item>50–70 л.с.</item>
        <item>70–100 л.с.</item>
        <item>100–121 л.с.</item>
        <item>121–150 л.с.</item>
        <item>свыше 150 л.с.</item>
    </string-array>

    <string-array name="quantityDriversHints">
        <item>@string/withoutLimits</item>
        <item>1 водитель</item>
        <item>2 водителя</item>
        <item>3 водителя</item>
        <item>4 водителя</item>
        <item>5 водителей</item>
    </string-array>

    <string-array name="minDriverAgeHints">
        <item>18 лет</item>
        <item>19 лет</item>
        <item>20 лет</item>
        <item>21 год</item>
        <item>22 года</item>
        <item>24 года</item>
    </string-array>

    <string-array name="minDriverExpHints">
        <item>1 год</item>
        <item>2 года</item>
        <item>3 года</item>
        <item>4 года</item>
        <item>более 5 лет</item>
    </string-array>

    <string-array name="yearsWithoutAccidentsHints">
        <item>Была авария в этом году</item>
        <item>1 год</item>
        <item>2 года</item>
        <item>3 года</item>
        <item>4 года</item>
        <item>более 5 лет</item>
    </string-array>

</resources>