<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title1"
        style="@style/ValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/coeffBT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="@string/InstalledByInsCompany"
        android:textColor="@color/MainHintTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/value1"
        app:layout_constraintStart_toStartOf="@+id/title1"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="14dp"
        android:text="@string/baseTariff"
        android:textColor="@color/MainLightGrayDark30"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/title1"
        app:layout_constraintEnd_toStartOf="@+id/value1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/title1"
        app:layout_constraintTop_toTopOf="@+id/title1" />

    <TextView
        android:id="@+id/value1"
        style="@style/ValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/defaultPrice"
        app:layout_constraintBottom_toBottomOf="@+id/detailText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title1" />

</androidx.constraintlayout.widget.ConstraintLayout>