<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="presentation.fragments.EnteringDataBtmSheet"

    >

    <View
        android:id="@+id/view"
        android:layout_width="64dp"
        android:layout_height="3dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@color/MainGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/dialogTitle"
        style="@style/ValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/SomeKindOfTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <SearchView
        android:id="@+id/searchView"
        style="@style/inputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_rounded_blue"
        android:iconifiedByDefault="false"
        android:inputType="text"
        android:queryHint=""
        android:searchHintIcon="@null"
        android:searchIcon="@null"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <Button
        android:id="@+id/nextBtn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="52dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:textColor="@color/MainWhite"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchList"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="0dp"
        android:text="@string/backLetter"
        android:textColor="@color/MainBlue"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/nextBtn"
        app:layout_constraintDimensionRatio="W, 1:1"
        app:layout_constraintStart_toStartOf="@+id/searchList"
        app:layout_constraintTop_toTopOf="@+id/nextBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>